{
  "version": 4,
  "terraform_version": "1.8.4",
  "serial": 1914,
  "lineage": "567fe067-cb4a-cef9-b3dd-c464a1f790dc",
  "resources": [
    {
      "module": "module.aws_virtual_machine_demo[0].module.ec2_instance",
      "mode": "managed",
      "type": "aws_instance",
      "name": "instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-06aa3f7caf3a30282",
            "arn": "arn:aws:ec2:us-east-1:008748484958:instance/i-08163170b0b9a4a35",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1f",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 2,
            "cpu_options": [
              {
                "core_count": 2,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-05762102e11035c1c",
                "volume_size": 30,
                "volume_type": "gp2"
              }
            ],
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-08163170b0b9a4a35",
            "instance_initiated_shutdown_behavior": "terminate",
            "instance_lifecycle": "spot",
            "instance_market_options": [
              {
                "market_type": "spot",
                "spot_options": [
                  {
                    "instance_interruption_behavior": "terminate",
                    "max_price": "0.046400",
                    "spot_instance_type": "one-time"
                  }
                ]
              }
            ],
            "instance_state": "running",
            "instance_type": "t2.medium",
            "ipv6_address_count": 0,
            "key_name": "mykey",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0e984f4e2ae67aeca",
            "private_dns": "ip-192-168-1-138.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "192.168.1.138",
            "public_ip": "34.204.203.101",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-05762102e11035c1c",
                "volume_size": 30,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "spot_instance_request_id": "sir-yn96y2aj",
            "subnet_id": "subnet-06c266d22128944be",
            "tags": {
              "Name": "target01",
              "author": "khangtictoc",
              "createdBy": "Terraform",
              "environment": "dev",
              "project": "lab_extra_03"
            },
            "tags_all": {
              "Name": "target01",
              "author": "khangtictoc",
              "createdBy": "Terraform",
              "environment": "dev",
              "project": "lab_extra_03"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-00bc17ccfa28131a4"
            ]
          },
          "dependencies": [
            "azurerm_resource_group.vpn_resource_group",
            "module.aws_virtual_machine_demo.module.keypair.aws_key_pair.my_keypair",
            "module.aws_virtual_machine_demo.module.keypair.tls_private_key.pk",
            "module.aws_virtual_machine_demo.module.security_group.aws_security_group.security_group",
            "module.vpn_s2s_aws_azure.module.aws_network.aws_internet_gateway.internet_gateway",
            "module.vpn_s2s_aws_azure.module.aws_network.aws_subnet.vpn_subnet",
            "module.vpn_s2s_aws_azure.module.aws_network.aws_vpc.vpn_vpc",
            "module.vpn_s2s_aws_azure.module.aws_network.aws_vpn_gateway.virtual_private_gateway",
            "module.vpn_s2s_aws_azure.module.azure_network.azurerm_public_ip.vpn_public_ip",
            "module.vpn_s2s_aws_azure.module.azure_network.azurerm_subnet.vpn_subnet",
            "module.vpn_s2s_aws_azure.module.azure_network.azurerm_virtual_network.vpn_virtual_network",
            "module.vpn_s2s_aws_azure.module.azure_network.azurerm_virtual_network_gateway.virtual_network_gateway",
            "module.vpn_s2s_aws_azure.module.vpn_SiteToSite_connection.aws_customer_gateway.customer_gateway",
            "module.vpn_s2s_aws_azure.module.vpn_SiteToSite_connection.aws_route.internet_gateway_route",
            "module.vpn_s2s_aws_azure.module.vpn_SiteToSite_connection.aws_route.vpn_gateway_route",
            "module.vpn_s2s_aws_azure.module.vpn_SiteToSite_connection.aws_vpn_connection.vpn_connection",
            "module.vpn_s2s_aws_azure.module.vpn_SiteToSite_connection.aws_vpn_connection_route.vpn_static_routes",
            "module.vpn_s2s_aws_azure.module.vpn_SiteToSite_connection.azurerm_local_network_gateway.local_network_gateway",
            "module.vpn_s2s_aws_azure.module.vpn_SiteToSite_connection.azurerm_virtual_network_gateway_connection.vpn_connection"
          ]
        }
      ]
    },
    {
      "module": "module.aws_virtual_machine_demo[0].module.security_group",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "security_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:008748484958:security-group/sg-00bc17ccfa28131a4",
            "description": "Allow all traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-00bc17ccfa28131a4",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "AllowAll",
            "name_prefix": "",
            "owner_id": "008748484958",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "AllowAll",
              "author": "khangtictoc",
              "createdBy": "Terraform",
              "environment": "dev",
              "project": "lab_extra_03"
            },
            "tags_all": {
              "Name": "AllowAll",
              "author": "khangtictoc",
              "createdBy": "Terraform",
              "environment": "dev",
              "project": "lab_extra_03"
            },
            "timeouts": null,
            "vpc_id": "vpc-09b5dc9050aa0cc8a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.vpn_resource_group",
            "module.vpn_s2s_aws_azure.module.aws_network.aws_internet_gateway.internet_gateway",
            "module.vpn_s2s_aws_azure.module.aws_network.aws_subnet.vpn_subnet",
            "module.vpn_s2s_aws_azure.module.aws_network.aws_vpc.vpn_vpc",
            "module.vpn_s2s_aws_azure.module.aws_network.aws_vpn_gateway.virtual_private_gateway",
            "module.vpn_s2s_aws_azure.module.azure_network.azurerm_public_ip.vpn_public_ip",
            "module.vpn_s2s_aws_azure.module.azure_network.azurerm_subnet.vpn_subnet",
            "module.vpn_s2s_aws_azure.module.azure_network.azurerm_virtual_network.vpn_virtual_network",
            "module.vpn_s2s_aws_azure.module.azure_network.azurerm_virtual_network_gateway.virtual_network_gateway",
            "module.vpn_s2s_aws_azure.module.vpn_SiteToSite_connection.aws_customer_gateway.customer_gateway",
            "module.vpn_s2s_aws_azure.module.vpn_SiteToSite_connection.aws_route.internet_gateway_route",
            "module.vpn_s2s_aws_azure.module.vpn_SiteToSite_connection.aws_route.vpn_gateway_route",
            "module.vpn_s2s_aws_azure.module.vpn_SiteToSite_connection.aws_vpn_connection.vpn_connection",
            "module.vpn_s2s_aws_azure.module.vpn_SiteToSite_connection.aws_vpn_connection_route.vpn_static_routes",
            "module.vpn_s2s_aws_azure.module.vpn_SiteToSite_connection.azurerm_local_network_gateway.local_network_gateway",
            "module.vpn_s2s_aws_azure.module.vpn_SiteToSite_connection.azurerm_virtual_network_gateway_connection.vpn_connection"
          ]
        }
      ]
    },
    {
      "module": "module.aws_virtual_machine_demo[0].module.security_group",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "security_group_rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "",
            "from_port": 0,
            "id": "sgrule-1292104667",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-00bc17ccfa28131a4",
            "security_group_rule_id": "sgr-06c33e2de214de466",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.vpn_resource_group",
            "module.aws_virtual_machine_demo.module.security_group.aws_security_group.security_group",
            "module.vpn_s2s_aws_azure.module.aws_network.aws_internet_gateway.internet_gateway",
            "module.vpn_s2s_aws_azure.module.aws_network.aws_subnet.vpn_subnet",
            "module.vpn_s2s_aws_azure.module.aws_network.aws_vpc.vpn_vpc",
            "module.vpn_s2s_aws_azure.module.aws_network.aws_vpn_gateway.virtual_private_gateway",
            "module.vpn_s2s_aws_azure.module.azure_network.azurerm_public_ip.vpn_public_ip",
            "module.vpn_s2s_aws_azure.module.azure_network.azurerm_subnet.vpn_subnet",
            "module.vpn_s2s_aws_azure.module.azure_network.azurerm_virtual_network.vpn_virtual_network",
            "module.vpn_s2s_aws_azure.module.azure_network.azurerm_virtual_network_gateway.virtual_network_gateway",
            "module.vpn_s2s_aws_azure.module.vpn_SiteToSite_connection.aws_customer_gateway.customer_gateway",
            "module.vpn_s2s_aws_azure.module.vpn_SiteToSite_connection.aws_route.internet_gateway_route",
            "module.vpn_s2s_aws_azure.module.vpn_SiteToSite_connection.aws_route.vpn_gateway_route",
            "module.vpn_s2s_aws_azure.module.vpn_SiteToSite_connection.aws_vpn_connection.vpn_connection",
            "module.vpn_s2s_aws_azure.module.vpn_SiteToSite_connection.aws_vpn_connection_route.vpn_static_routes",
            "module.vpn_s2s_aws_azure.module.vpn_SiteToSite_connection.azurerm_local_network_gateway.local_network_gateway",
            "module.vpn_s2s_aws_azure.module.vpn_SiteToSite_connection.azurerm_virtual_network_gateway_connection.vpn_connection"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "",
            "from_port": 0,
            "id": "sgrule-3141867062",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-00bc17ccfa28131a4",
            "security_group_rule_id": "sgr-06c33e2de214de466",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.vpn_resource_group",
            "module.aws_virtual_machine_demo.module.security_group.aws_security_group.security_group",
            "module.vpn_s2s_aws_azure.module.aws_network.aws_internet_gateway.internet_gateway",
            "module.vpn_s2s_aws_azure.module.aws_network.aws_subnet.vpn_subnet",
            "module.vpn_s2s_aws_azure.module.aws_network.aws_vpc.vpn_vpc",
            "module.vpn_s2s_aws_azure.module.aws_network.aws_vpn_gateway.virtual_private_gateway",
            "module.vpn_s2s_aws_azure.module.azure_network.azurerm_public_ip.vpn_public_ip",
            "module.vpn_s2s_aws_azure.module.azure_network.azurerm_subnet.vpn_subnet",
            "module.vpn_s2s_aws_azure.module.azure_network.azurerm_virtual_network.vpn_virtual_network",
            "module.vpn_s2s_aws_azure.module.azure_network.azurerm_virtual_network_gateway.virtual_network_gateway",
            "module.vpn_s2s_aws_azure.module.vpn_SiteToSite_connection.aws_customer_gateway.customer_gateway",
            "module.vpn_s2s_aws_azure.module.vpn_SiteToSite_connection.aws_route.internet_gateway_route",
            "module.vpn_s2s_aws_azure.module.vpn_SiteToSite_connection.aws_route.vpn_gateway_route",
            "module.vpn_s2s_aws_azure.module.vpn_SiteToSite_connection.aws_vpn_connection.vpn_connection",
            "module.vpn_s2s_aws_azure.module.vpn_SiteToSite_connection.aws_vpn_connection_route.vpn_static_routes",
            "module.vpn_s2s_aws_azure.module.vpn_SiteToSite_connection.azurerm_local_network_gateway.local_network_gateway",
            "module.vpn_s2s_aws_azure.module.vpn_SiteToSite_connection.azurerm_virtual_network_gateway_connection.vpn_connection"
          ]
        }
      ]
    },
    {
      "module": "module.azure_virtual_machine_demo[0].module.network_interface",
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "network_interface",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/ac90b42a-8ba9-48f5-9479-94dfd054e40d/resourceGroups/VPNSite2SiteDemo/providers/Microsoft.Network/networkInterfaces/myNIC01",
            "internal_domain_name_suffix": "cqbl02s2qlwerc1l1ylw3errwb.hx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "internal",
                "primary": true,
                "private_ip_address": "172.16.1.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/ac90b42a-8ba9-48f5-9479-94dfd054e40d/resourceGroups/VPNSite2SiteDemo/providers/Microsoft.Network/publicIPAddresses/myPublicIP01",
                "subnet_id": "/subscriptions/ac90b42a-8ba9-48f5-9479-94dfd054e40d/resourceGroups/VPNSite2SiteDemo/providers/Microsoft.Network/virtualNetworks/VpnVnet/subnets/AppSubnet"
              }
            ],
            "location": "eastasia",
            "mac_address": "00-22-48-EC-06-69",
            "name": "myNIC01",
            "private_ip_address": "172.16.1.4",
            "private_ip_addresses": [
              "172.16.1.4"
            ],
            "resource_group_name": "VPNSite2SiteDemo",
            "virtual_machine_id": "/subscriptions/ac90b42a-8ba9-48f5-9479-94dfd054e40d/resourceGroups/VPNSite2SiteDemo/providers/Microsoft.Compute/virtualMachines/source01"
          },
          "dependencies": [
            "azurerm_resource_group.vpn_resource_group",
            "module.azure_virtual_machine_demo.module.network_interface.azurerm_public_ip.public_ip",
            "module.vpn_s2s_aws_azure.module.aws_network.aws_internet_gateway.internet_gateway",
            "module.vpn_s2s_aws_azure.module.aws_network.aws_subnet.vpn_subnet",
            "module.vpn_s2s_aws_azure.module.aws_network.aws_vpc.vpn_vpc",
            "module.vpn_s2s_aws_azure.module.aws_network.aws_vpn_gateway.virtual_private_gateway",
            "module.vpn_s2s_aws_azure.module.azure_network.azurerm_public_ip.vpn_public_ip",
            "module.vpn_s2s_aws_azure.module.azure_network.azurerm_subnet.vpn_subnet",
            "module.vpn_s2s_aws_azure.module.azure_network.azurerm_virtual_network.vpn_virtual_network",
            "module.vpn_s2s_aws_azure.module.azure_network.azurerm_virtual_network_gateway.virtual_network_gateway",
            "module.vpn_s2s_aws_azure.module.vpn_SiteToSite_connection.aws_customer_gateway.customer_gateway",
            "module.vpn_s2s_aws_azure.module.vpn_SiteToSite_connection.aws_route.internet_gateway_route",
            "module.vpn_s2s_aws_azure.module.vpn_SiteToSite_connection.aws_route.vpn_gateway_route",
            "module.vpn_s2s_aws_azure.module.vpn_SiteToSite_connection.aws_vpn_connection.vpn_connection",
            "module.vpn_s2s_aws_azure.module.vpn_SiteToSite_connection.aws_vpn_connection_route.vpn_static_routes",
            "module.vpn_s2s_aws_azure.module.vpn_SiteToSite_connection.azurerm_local_network_gateway.local_network_gateway",
            "module.vpn_s2s_aws_azure.module.vpn_SiteToSite_connection.azurerm_virtual_network_gateway_connection.vpn_connection"
          ]
        }
      ]
    },
    {
      "module": "module.azure_virtual_machine_demo[0].module.network_interface",
      "mode": "managed",
      "type": "azurerm_network_interface_security_group_association",
      "name": "nsg_interface_attachment",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/ac90b42a-8ba9-48f5-9479-94dfd054e40d/resourceGroups/VPNSite2SiteDemo/providers/Microsoft.Network/networkInterfaces/myNIC01|/subscriptions/ac90b42a-8ba9-48f5-9479-94dfd054e40d/resourceGroups/VPNSite2SiteDemo/providers/Microsoft.Network/networkSecurityGroups/myNSG01",
            "network_interface_id": "/subscriptions/ac90b42a-8ba9-48f5-9479-94dfd054e40d/resourceGroups/VPNSite2SiteDemo/providers/Microsoft.Network/networkInterfaces/myNIC01",
            "network_security_group_id": "/subscriptions/ac90b42a-8ba9-48f5-9479-94dfd054e40d/resourceGroups/VPNSite2SiteDemo/providers/Microsoft.Network/networkSecurityGroups/myNSG01"
          },
          "dependencies": [
            "azurerm_resource_group.vpn_resource_group",
            "module.azure_virtual_machine_demo.module.network_interface.azurerm_network_interface.network_interface",
            "module.azure_virtual_machine_demo.module.network_interface.azurerm_public_ip.public_ip",
            "module.azure_virtual_machine_demo.module.network_security_group.azurerm_network_security_group.network_security_group",
            "module.vpn_s2s_aws_azure.module.aws_network.aws_internet_gateway.internet_gateway",
            "module.vpn_s2s_aws_azure.module.aws_network.aws_subnet.vpn_subnet",
            "module.vpn_s2s_aws_azure.module.aws_network.aws_vpc.vpn_vpc",
            "module.vpn_s2s_aws_azure.module.aws_network.aws_vpn_gateway.virtual_private_gateway",
            "module.vpn_s2s_aws_azure.module.azure_network.azurerm_public_ip.vpn_public_ip",
            "module.vpn_s2s_aws_azure.module.azure_network.azurerm_subnet.vpn_subnet",
            "module.vpn_s2s_aws_azure.module.azure_network.azurerm_virtual_network.vpn_virtual_network",
            "module.vpn_s2s_aws_azure.module.azure_network.azurerm_virtual_network_gateway.virtual_network_gateway",
            "module.vpn_s2s_aws_azure.module.vpn_SiteToSite_connection.aws_customer_gateway.customer_gateway",
            "module.vpn_s2s_aws_azure.module.vpn_SiteToSite_connection.aws_route.internet_gateway_route",
            "module.vpn_s2s_aws_azure.module.vpn_SiteToSite_connection.aws_route.vpn_gateway_route",
            "module.vpn_s2s_aws_azure.module.vpn_SiteToSite_connection.aws_vpn_connection.vpn_connection",
            "module.vpn_s2s_aws_azure.module.vpn_SiteToSite_connection.aws_vpn_connection_route.vpn_static_routes",
            "module.vpn_s2s_aws_azure.module.vpn_SiteToSite_connection.azurerm_local_network_gateway.local_network_gateway",
            "module.vpn_s2s_aws_azure.module.vpn_SiteToSite_connection.azurerm_virtual_network_gateway_connection.vpn_connection"
          ]
        }
      ]
    },
    {
      "module": "module.azure_virtual_machine_demo[0].module.network_interface",
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "public_ip",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Dynamic",
            "ddos_protection_mode": "VirtualNetworkInherited",
            "id": "/subscriptions/ac90b42a-8ba9-48f5-9479-94dfd054e40d/resourceGroups/VPNSite2SiteDemo/providers/Microsoft.Network/publicIPAddresses/myPublicIP01",
            "idle_timeout_in_minutes": 4,
            "ip_address": "20.255.154.27",
            "ip_version": "IPv4",
            "location": "eastasia",
            "name": "myPublicIP01",
            "resource_group_name": "VPNSite2SiteDemo",
            "sku": "Basic",
            "sku_tier": "Regional"
          },
          "dependencies": [
            "azurerm_resource_group.vpn_resource_group"
          ]
        }
      ]
    },
    {
      "module": "module.azure_virtual_machine_demo[0].module.network_security_group",
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "network_security_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/ac90b42a-8ba9-48f5-9479-94dfd054e40d/resourceGroups/VPNSite2SiteDemo/providers/Microsoft.Network/networkSecurityGroups/myNSG01",
            "location": "eastasia",
            "name": "myNSG01",
            "resource_group_name": "VPNSite2SiteDemo",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "*",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "AllowAllInbound",
                "priority": 100,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "*",
                "destination_port_ranges": [],
                "direction": "Outbound",
                "name": "AllowAllOutbound",
                "priority": 100,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.vpn_resource_group"
          ]
        }
      ]
    },
    {
      "module": "module.azure_virtual_machine_demo[0].module.network_security_group",
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "security_rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": [],
            "destination_application_security_group_ids": [],
            "destination_port_range": "*",
            "destination_port_ranges": [],
            "direction": "Inbound",
            "id": "/subscriptions/ac90b42a-8ba9-48f5-9479-94dfd054e40d/resourceGroups/VPNSite2SiteDemo/providers/Microsoft.Network/networkSecurityGroups/myNSG01/securityRules/AllowAllInbound",
            "name": "AllowAllInbound",
            "network_security_group_name": "myNSG01",
            "priority": 100,
            "protocol": "Tcp",
            "resource_group_name": "VPNSite2SiteDemo",
            "source_address_prefix": "*",
            "source_address_prefixes": [],
            "source_application_security_group_ids": [],
            "source_port_range": "*",
            "source_port_ranges": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.vpn_resource_group",
            "module.azure_virtual_machine_demo.module.network_security_group.azurerm_network_security_group.network_security_group"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": [],
            "destination_application_security_group_ids": [],
            "destination_port_range": "*",
            "destination_port_ranges": [],
            "direction": "Outbound",
            "id": "/subscriptions/ac90b42a-8ba9-48f5-9479-94dfd054e40d/resourceGroups/VPNSite2SiteDemo/providers/Microsoft.Network/networkSecurityGroups/myNSG01/securityRules/AllowAllOutbound",
            "name": "AllowAllOutbound",
            "network_security_group_name": "myNSG01",
            "priority": 100,
            "protocol": "Tcp",
            "resource_group_name": "VPNSite2SiteDemo",
            "source_address_prefix": "*",
            "source_address_prefixes": [],
            "source_application_security_group_ids": [],
            "source_port_range": "*",
            "source_port_ranges": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.vpn_resource_group",
            "module.azure_virtual_machine_demo.module.network_security_group.azurerm_network_security_group.network_security_group"
          ]
        }
      ]
    },
    {
      "module": "module.azure_virtual_machine_demo[1].module.network_interface",
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "network_interface",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/ac90b42a-8ba9-48f5-9479-94dfd054e40d/resourceGroups/VPNSite2SiteDemo/providers/Microsoft.Network/networkInterfaces/myNIC02",
            "internal_domain_name_suffix": "ga5sg3zazo1uhoovkzfv3n0r0e.hx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "internal",
                "primary": true,
                "private_ip_address": "10.10.1.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/ac90b42a-8ba9-48f5-9479-94dfd054e40d/resourceGroups/VPNSite2SiteDemo/providers/Microsoft.Network/publicIPAddresses/myPublicIP02",
                "subnet_id": "/subscriptions/ac90b42a-8ba9-48f5-9479-94dfd054e40d/resourceGroups/VPNSite2SiteDemo2/providers/Microsoft.Network/virtualNetworks/VpnVnet2/subnets/AppSubnet"
              }
            ],
            "location": "eastasia",
            "mac_address": "00-22-48-ED-E8-7E",
            "name": "myNIC02",
            "private_ip_address": "10.10.1.4",
            "private_ip_addresses": [
              "10.10.1.4"
            ],
            "resource_group_name": "VPNSite2SiteDemo",
            "virtual_machine_id": "/subscriptions/ac90b42a-8ba9-48f5-9479-94dfd054e40d/resourceGroups/VPNSite2SiteDemo/providers/Microsoft.Compute/virtualMachines/source02"
          },
          "dependencies": [
            "azurerm_resource_group.vpn_resource_group",
            "module.azure_virtual_machine_demo.module.network_interface.azurerm_public_ip.public_ip",
            "module.vpn_s2s_aws_azure.module.aws_network.aws_internet_gateway.internet_gateway",
            "module.vpn_s2s_aws_azure.module.aws_network.aws_subnet.vpn_subnet",
            "module.vpn_s2s_aws_azure.module.aws_network.aws_vpc.vpn_vpc",
            "module.vpn_s2s_aws_azure.module.aws_network.aws_vpn_gateway.virtual_private_gateway",
            "module.vpn_s2s_aws_azure.module.azure_network.azurerm_public_ip.vpn_public_ip",
            "module.vpn_s2s_aws_azure.module.azure_network.azurerm_subnet.vpn_subnet",
            "module.vpn_s2s_aws_azure.module.azure_network.azurerm_virtual_network.vpn_virtual_network",
            "module.vpn_s2s_aws_azure.module.azure_network.azurerm_virtual_network_gateway.virtual_network_gateway",
            "module.vpn_s2s_aws_azure.module.vpn_SiteToSite_connection.aws_customer_gateway.customer_gateway",
            "module.vpn_s2s_aws_azure.module.vpn_SiteToSite_connection.aws_route.internet_gateway_route",
            "module.vpn_s2s_aws_azure.module.vpn_SiteToSite_connection.aws_route.vpn_gateway_route",
            "module.vpn_s2s_aws_azure.module.vpn_SiteToSite_connection.aws_vpn_connection.vpn_connection",
            "module.vpn_s2s_aws_azure.module.vpn_SiteToSite_connection.aws_vpn_connection_route.vpn_static_routes",
            "module.vpn_s2s_aws_azure.module.vpn_SiteToSite_connection.azurerm_local_network_gateway.local_network_gateway",
            "module.vpn_s2s_aws_azure.module.vpn_SiteToSite_connection.azurerm_virtual_network_gateway_connection.vpn_connection"
          ]
        }
      ]
    },
    {
      "module": "module.azure_virtual_machine_demo[1].module.network_interface",
      "mode": "managed",
      "type": "azurerm_network_interface_security_group_association",
      "name": "nsg_interface_attachment",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/ac90b42a-8ba9-48f5-9479-94dfd054e40d/resourceGroups/VPNSite2SiteDemo/providers/Microsoft.Network/networkInterfaces/myNIC02|/subscriptions/ac90b42a-8ba9-48f5-9479-94dfd054e40d/resourceGroups/VPNSite2SiteDemo/providers/Microsoft.Network/networkSecurityGroups/myNSG02",
            "network_interface_id": "/subscriptions/ac90b42a-8ba9-48f5-9479-94dfd054e40d/resourceGroups/VPNSite2SiteDemo/providers/Microsoft.Network/networkInterfaces/myNIC02",
            "network_security_group_id": "/subscriptions/ac90b42a-8ba9-48f5-9479-94dfd054e40d/resourceGroups/VPNSite2SiteDemo/providers/Microsoft.Network/networkSecurityGroups/myNSG02"
          },
          "dependencies": [
            "azurerm_resource_group.vpn_resource_group",
            "module.azure_virtual_machine_demo.module.network_interface.azurerm_network_interface.network_interface",
            "module.azure_virtual_machine_demo.module.network_interface.azurerm_public_ip.public_ip",
            "module.azure_virtual_machine_demo.module.network_security_group.azurerm_network_security_group.network_security_group",
            "module.vpn_s2s_aws_azure.module.aws_network.aws_internet_gateway.internet_gateway",
            "module.vpn_s2s_aws_azure.module.aws_network.aws_subnet.vpn_subnet",
            "module.vpn_s2s_aws_azure.module.aws_network.aws_vpc.vpn_vpc",
            "module.vpn_s2s_aws_azure.module.aws_network.aws_vpn_gateway.virtual_private_gateway",
            "module.vpn_s2s_aws_azure.module.azure_network.azurerm_public_ip.vpn_public_ip",
            "module.vpn_s2s_aws_azure.module.azure_network.azurerm_subnet.vpn_subnet",
            "module.vpn_s2s_aws_azure.module.azure_network.azurerm_virtual_network.vpn_virtual_network",
            "module.vpn_s2s_aws_azure.module.azure_network.azurerm_virtual_network_gateway.virtual_network_gateway",
            "module.vpn_s2s_aws_azure.module.vpn_SiteToSite_connection.aws_customer_gateway.customer_gateway",
            "module.vpn_s2s_aws_azure.module.vpn_SiteToSite_connection.aws_route.internet_gateway_route",
            "module.vpn_s2s_aws_azure.module.vpn_SiteToSite_connection.aws_route.vpn_gateway_route",
            "module.vpn_s2s_aws_azure.module.vpn_SiteToSite_connection.aws_vpn_connection.vpn_connection",
            "module.vpn_s2s_aws_azure.module.vpn_SiteToSite_connection.aws_vpn_connection_route.vpn_static_routes",
            "module.vpn_s2s_aws_azure.module.vpn_SiteToSite_connection.azurerm_local_network_gateway.local_network_gateway",
            "module.vpn_s2s_aws_azure.module.vpn_SiteToSite_connection.azurerm_virtual_network_gateway_connection.vpn_connection"
          ]
        }
      ]
    },
    {
      "module": "module.azure_virtual_machine_demo[1].module.network_interface",
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "public_ip",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Dynamic",
            "ddos_protection_mode": "VirtualNetworkInherited",
            "id": "/subscriptions/ac90b42a-8ba9-48f5-9479-94dfd054e40d/resourceGroups/VPNSite2SiteDemo/providers/Microsoft.Network/publicIPAddresses/myPublicIP02",
            "idle_timeout_in_minutes": 4,
            "ip_address": "20.255.152.134",
            "ip_version": "IPv4",
            "location": "eastasia",
            "name": "myPublicIP02",
            "resource_group_name": "VPNSite2SiteDemo",
            "sku": "Basic",
            "sku_tier": "Regional"
          },
          "dependencies": [
            "azurerm_resource_group.vpn_resource_group"
          ]
        }
      ]
    },
    {
      "module": "module.azure_virtual_machine_demo[1].module.network_security_group",
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "network_security_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/ac90b42a-8ba9-48f5-9479-94dfd054e40d/resourceGroups/VPNSite2SiteDemo/providers/Microsoft.Network/networkSecurityGroups/myNSG02",
            "location": "eastasia",
            "name": "myNSG02",
            "resource_group_name": "VPNSite2SiteDemo",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "*",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "AllowAllInbound",
                "priority": 100,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "*",
                "destination_port_ranges": [],
                "direction": "Outbound",
                "name": "AllowAllOutbound",
                "priority": 100,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.vpn_resource_group"
          ]
        }
      ]
    },
    {
      "module": "module.azure_virtual_machine_demo[1].module.network_security_group",
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "security_rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": [],
            "destination_application_security_group_ids": [],
            "destination_port_range": "*",
            "destination_port_ranges": [],
            "direction": "Inbound",
            "id": "/subscriptions/ac90b42a-8ba9-48f5-9479-94dfd054e40d/resourceGroups/VPNSite2SiteDemo/providers/Microsoft.Network/networkSecurityGroups/myNSG02/securityRules/AllowAllInbound",
            "name": "AllowAllInbound",
            "network_security_group_name": "myNSG02",
            "priority": 100,
            "protocol": "Tcp",
            "resource_group_name": "VPNSite2SiteDemo",
            "source_address_prefix": "*",
            "source_address_prefixes": [],
            "source_application_security_group_ids": [],
            "source_port_range": "*",
            "source_port_ranges": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.vpn_resource_group",
            "module.azure_virtual_machine_demo.module.network_security_group.azurerm_network_security_group.network_security_group"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": [],
            "destination_application_security_group_ids": [],
            "destination_port_range": "*",
            "destination_port_ranges": [],
            "direction": "Outbound",
            "id": "/subscriptions/ac90b42a-8ba9-48f5-9479-94dfd054e40d/resourceGroups/VPNSite2SiteDemo/providers/Microsoft.Network/networkSecurityGroups/myNSG02/securityRules/AllowAllOutbound",
            "name": "AllowAllOutbound",
            "network_security_group_name": "myNSG02",
            "priority": 100,
            "protocol": "Tcp",
            "resource_group_name": "VPNSite2SiteDemo",
            "source_address_prefix": "*",
            "source_address_prefixes": [],
            "source_application_security_group_ids": [],
            "source_port_range": "*",
            "source_port_ranges": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.vpn_resource_group",
            "module.azure_virtual_machine_demo.module.network_security_group.azurerm_network_security_group.network_security_group"
          ]
        }
      ]
    },
    {
      "module": "module.vpn_s2s_aws_azure.module.aws_network",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:008748484958:internet-gateway/igw-02909ad3c551139d5",
            "id": "igw-02909ad3c551139d5",
            "owner_id": "008748484958",
            "tags": {
              "Name": "internet-gateway-vpn-test",
              "author": "khangtictoc",
              "createdBy": "Terraform",
              "environment": "dev",
              "project": "lab_extra_03"
            },
            "tags_all": {
              "Name": "internet-gateway-vpn-test",
              "author": "khangtictoc",
              "createdBy": "Terraform",
              "environment": "dev",
              "project": "lab_extra_03"
            },
            "vpc_id": "vpc-09b5dc9050aa0cc8a"
          },
          "dependencies": [
            "azurerm_resource_group.vpn_resource_group",
            "module.vpn_s2s_aws_azure.module.aws_network.aws_vpc.vpn_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpn_s2s_aws_azure.module.aws_network",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "vpn_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:008748484958:subnet/subnet-06c266d22128944be",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1f",
            "availability_zone_id": "use1-az5",
            "cidr_block": "192.168.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-06c266d22128944be",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "008748484958",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "vpn-subnet",
              "author": "khangtictoc",
              "createdBy": "Terraform",
              "environment": "dev",
              "project": "lab_extra_03"
            },
            "tags_all": {
              "Name": "vpn-subnet",
              "author": "khangtictoc",
              "createdBy": "Terraform",
              "environment": "dev",
              "project": "lab_extra_03"
            },
            "vpc_id": "vpc-09b5dc9050aa0cc8a"
          },
          "dependencies": [
            "azurerm_resource_group.vpn_resource_group",
            "module.vpn_s2s_aws_azure.module.aws_network.aws_vpc.vpn_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpn_s2s_aws_azure.module.aws_network",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpn_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:008748484958:vpc/vpc-09b5dc9050aa0cc8a",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "192.168.0.0/16",
            "default_network_acl_id": "acl-08faef5bf7628770d",
            "default_route_table_id": "rtb-039827a9320c75f33",
            "default_security_group_id": "sg-0847333de889370fe",
            "dhcp_options_id": "dopt-074dfdadd578e5461",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-09b5dc9050aa0cc8a",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-039827a9320c75f33",
            "owner_id": "008748484958",
            "tags": {
              "Name": "vpn-vpc",
              "author": "khangtictoc",
              "createdBy": "Terraform",
              "environment": "dev",
              "project": "lab_extra_03"
            },
            "tags_all": {
              "Name": "vpn-vpc",
              "author": "khangtictoc",
              "createdBy": "Terraform",
              "environment": "dev",
              "project": "lab_extra_03"
            }
          },
          "dependencies": [
            "azurerm_resource_group.vpn_resource_group"
          ]
        }
      ]
    },
    {
      "module": "module.vpn_s2s_aws_azure.module.azure_network[0]",
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "vpn_public_ip",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "ddos_protection_mode": "VirtualNetworkInherited",
            "id": "/subscriptions/ac90b42a-8ba9-48f5-9479-94dfd054e40d/resourceGroups/VPNSite2SiteDemo/providers/Microsoft.Network/publicIPAddresses/VNet-Gateway",
            "idle_timeout_in_minutes": 4,
            "ip_address": "40.83.122.179",
            "ip_version": "IPv4",
            "location": "eastasia",
            "name": "VNet-Gateway",
            "resource_group_name": "VPNSite2SiteDemo",
            "sku": "Standard",
            "sku_tier": "Regional",
            "tags": {
              "author": "khangtictoc",
              "createdBy": "Terraform",
              "environment": "dev",
              "project": "lab_extra_03"
            }
          },
          "dependencies": [
            "azurerm_resource_group.vpn_resource_group"
          ]
        }
      ]
    },
    {
      "module": "module.vpn_s2s_aws_azure.module.azure_network[0]",
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "vpn_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "172.16.0.0/27"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/ac90b42a-8ba9-48f5-9479-94dfd054e40d/resourceGroups/VPNSite2SiteDemo/providers/Microsoft.Network/virtualNetworks/VpnVnet/subnets/GatewaySubnet",
            "name": "GatewaySubnet",
            "private_endpoint_network_policies_enabled": true,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "VPNSite2SiteDemo",
            "virtual_network_name": "VpnVnet"
          },
          "dependencies": [
            "azurerm_resource_group.vpn_resource_group",
            "module.vpn_s2s_aws_azure.module.azure_network.azurerm_virtual_network.vpn_virtual_network"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "172.16.1.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/ac90b42a-8ba9-48f5-9479-94dfd054e40d/resourceGroups/VPNSite2SiteDemo/providers/Microsoft.Network/virtualNetworks/VpnVnet/subnets/AppSubnet",
            "name": "AppSubnet",
            "private_endpoint_network_policies_enabled": true,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "VPNSite2SiteDemo",
            "virtual_network_name": "VpnVnet"
          },
          "dependencies": [
            "azurerm_resource_group.vpn_resource_group",
            "module.vpn_s2s_aws_azure.module.azure_network.azurerm_virtual_network.vpn_virtual_network"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "172.16.2.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/ac90b42a-8ba9-48f5-9479-94dfd054e40d/resourceGroups/VPNSite2SiteDemo/providers/Microsoft.Network/virtualNetworks/VpnVnet/subnets/AppGatewaySubnet",
            "name": "AppGatewaySubnet",
            "private_endpoint_network_policies_enabled": true,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "VPNSite2SiteDemo",
            "virtual_network_name": "VpnVnet"
          },
          "dependencies": [
            "azurerm_resource_group.vpn_resource_group",
            "module.vpn_s2s_aws_azure.module.azure_network.azurerm_virtual_network.vpn_virtual_network"
          ]
        }
      ]
    },
    {
      "module": "module.vpn_s2s_aws_azure.module.azure_network[0]",
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "vpn_virtual_network",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "172.16.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "72bd0214-825c-48ec-8b6b-de176e9231b1",
            "id": "/subscriptions/ac90b42a-8ba9-48f5-9479-94dfd054e40d/resourceGroups/VPNSite2SiteDemo/providers/Microsoft.Network/virtualNetworks/VpnVnet",
            "location": "eastasia",
            "name": "VpnVnet",
            "resource_group_name": "VPNSite2SiteDemo",
            "subnet": [
              {
                "address_prefix": "172.16.0.0/27",
                "id": "/subscriptions/ac90b42a-8ba9-48f5-9479-94dfd054e40d/resourceGroups/VPNSite2SiteDemo/providers/Microsoft.Network/virtualNetworks/VpnVnet/subnets/GatewaySubnet",
                "name": "GatewaySubnet"
              },
              {
                "address_prefix": "172.16.1.0/24",
                "id": "/subscriptions/ac90b42a-8ba9-48f5-9479-94dfd054e40d/resourceGroups/VPNSite2SiteDemo/providers/Microsoft.Network/virtualNetworks/VpnVnet/subnets/AppSubnet",
                "name": "AppSubnet"
              },
              {
                "address_prefix": "172.16.2.0/24",
                "id": "/subscriptions/ac90b42a-8ba9-48f5-9479-94dfd054e40d/resourceGroups/VPNSite2SiteDemo/providers/Microsoft.Network/virtualNetworks/VpnVnet/subnets/AppGatewaySubnet",
                "name": "AppGatewaySubnet"
              }
            ],
            "tags": {
              "author": "khangtictoc",
              "createdBy": "Terraform",
              "environment": "dev",
              "project": "lab_extra_03"
            }
          },
          "dependencies": [
            "azurerm_resource_group.vpn_resource_group"
          ]
        }
      ]
    },
    {
      "module": "module.vpn_s2s_aws_azure.module.azure_network[0]",
      "mode": "managed",
      "type": "azurerm_virtual_network_gateway",
      "name": "virtual_network_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "active_active": false,
            "bgp_route_translation_for_nat_enabled": false,
            "bgp_settings": [
              {
                "asn": 65515,
                "peer_weight": 0,
                "peering_addresses": [
                  {
                    "default_addresses": [
                      "172.16.0.30"
                    ],
                    "ip_configuration_name": "Vnet-Gateway-IP-Config",
                    "tunnel_ip_addresses": [
                      "40.83.122.179"
                    ]
                  }
                ]
              }
            ],
            "dns_forwarding_enabled": false,
            "enable_bgp": false,
            "generation": "Generation1",
            "id": "/subscriptions/ac90b42a-8ba9-48f5-9479-94dfd054e40d/resourceGroups/VPNSite2SiteDemo/providers/Microsoft.Network/virtualNetworkGateways/Vnet-Gateway-Demo",
            "ip_configuration": [
              {
                "name": "Vnet-Gateway-IP-Config",
                "private_ip_address_allocation": "Dynamic",
                "public_ip_address_id": "/subscriptions/ac90b42a-8ba9-48f5-9479-94dfd054e40d/resourceGroups/VPNSite2SiteDemo/providers/Microsoft.Network/publicIPAddresses/VNet-Gateway",
                "subnet_id": "/subscriptions/ac90b42a-8ba9-48f5-9479-94dfd054e40d/resourceGroups/VPNSite2SiteDemo/providers/Microsoft.Network/virtualNetworks/VpnVnet/subnets/GatewaySubnet"
              }
            ],
            "ip_sec_replay_protection_enabled": true,
            "location": "eastasia",
            "name": "Vnet-Gateway-Demo",
            "private_ip_address_enabled": false,
            "remote_vnet_traffic_enabled": false,
            "resource_group_name": "VPNSite2SiteDemo",
            "sku": "VpnGw1",
            "tags": {
              "author": "khangtictoc",
              "createdBy": "Terraform",
              "environment": "dev",
              "project": "lab_extra_03"
            },
            "type": "Vpn",
            "virtual_wan_traffic_enabled": false,
            "vpn_type": "RouteBased"
          },
          "dependencies": [
            "azurerm_resource_group.vpn_resource_group",
            "module.vpn_s2s_aws_azure.module.azure_network.azurerm_public_ip.vpn_public_ip",
            "module.vpn_s2s_aws_azure.module.azure_network.azurerm_subnet.vpn_subnet",
            "module.vpn_s2s_aws_azure.module.azure_network.azurerm_virtual_network.vpn_virtual_network"
          ]
        }
      ]
    },
    {
      "module": "module.vpn_s2s_aws_azure.module.azure_network[1]",
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "vpn_public_ip",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "ddos_protection_mode": "VirtualNetworkInherited",
            "id": "/subscriptions/ac90b42a-8ba9-48f5-9479-94dfd054e40d/resourceGroups/VPNSite2SiteDemo2/providers/Microsoft.Network/publicIPAddresses/VNet-Gateway2",
            "idle_timeout_in_minutes": 4,
            "ip_address": "168.63.143.66",
            "ip_version": "IPv4",
            "location": "eastasia",
            "name": "VNet-Gateway2",
            "resource_group_name": "VPNSite2SiteDemo2",
            "sku": "Standard",
            "sku_tier": "Regional",
            "tags": {
              "author": "khangtictoc",
              "createdBy": "Terraform",
              "environment": "dev",
              "project": "lab_extra_03"
            }
          },
          "dependencies": [
            "azurerm_resource_group.vpn_resource_group"
          ]
        }
      ]
    },
    {
      "module": "module.vpn_s2s_aws_azure.module.azure_network[1]",
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "vpn_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.10.0.0/27"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/ac90b42a-8ba9-48f5-9479-94dfd054e40d/resourceGroups/VPNSite2SiteDemo2/providers/Microsoft.Network/virtualNetworks/VpnVnet2/subnets/GatewaySubnet",
            "name": "GatewaySubnet",
            "private_endpoint_network_policies_enabled": true,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "VPNSite2SiteDemo2",
            "virtual_network_name": "VpnVnet2"
          },
          "dependencies": [
            "azurerm_resource_group.vpn_resource_group",
            "module.vpn_s2s_aws_azure.module.azure_network.azurerm_virtual_network.vpn_virtual_network"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.10.1.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/ac90b42a-8ba9-48f5-9479-94dfd054e40d/resourceGroups/VPNSite2SiteDemo2/providers/Microsoft.Network/virtualNetworks/VpnVnet2/subnets/AppSubnet",
            "name": "AppSubnet",
            "private_endpoint_network_policies_enabled": true,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "VPNSite2SiteDemo2",
            "virtual_network_name": "VpnVnet2"
          },
          "dependencies": [
            "azurerm_resource_group.vpn_resource_group",
            "module.vpn_s2s_aws_azure.module.azure_network.azurerm_virtual_network.vpn_virtual_network"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.10.2.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/ac90b42a-8ba9-48f5-9479-94dfd054e40d/resourceGroups/VPNSite2SiteDemo2/providers/Microsoft.Network/virtualNetworks/VpnVnet2/subnets/AppGatewaySubnet",
            "name": "AppGatewaySubnet",
            "private_endpoint_network_policies_enabled": true,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "VPNSite2SiteDemo2",
            "virtual_network_name": "VpnVnet2"
          },
          "dependencies": [
            "azurerm_resource_group.vpn_resource_group",
            "module.vpn_s2s_aws_azure.module.azure_network.azurerm_virtual_network.vpn_virtual_network"
          ]
        }
      ]
    },
    {
      "module": "module.vpn_s2s_aws_azure.module.azure_network[1]",
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "vpn_virtual_network",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.10.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "77233f30-cb20-43b7-b9d5-564b5eb751d4",
            "id": "/subscriptions/ac90b42a-8ba9-48f5-9479-94dfd054e40d/resourceGroups/VPNSite2SiteDemo2/providers/Microsoft.Network/virtualNetworks/VpnVnet2",
            "location": "eastasia",
            "name": "VpnVnet2",
            "resource_group_name": "VPNSite2SiteDemo2",
            "subnet": [
              {
                "address_prefix": "10.10.0.0/27",
                "id": "/subscriptions/ac90b42a-8ba9-48f5-9479-94dfd054e40d/resourceGroups/VPNSite2SiteDemo2/providers/Microsoft.Network/virtualNetworks/VpnVnet2/subnets/GatewaySubnet",
                "name": "GatewaySubnet"
              },
              {
                "address_prefix": "10.10.1.0/24",
                "id": "/subscriptions/ac90b42a-8ba9-48f5-9479-94dfd054e40d/resourceGroups/VPNSite2SiteDemo2/providers/Microsoft.Network/virtualNetworks/VpnVnet2/subnets/AppSubnet",
                "name": "AppSubnet"
              },
              {
                "address_prefix": "10.10.2.0/24",
                "id": "/subscriptions/ac90b42a-8ba9-48f5-9479-94dfd054e40d/resourceGroups/VPNSite2SiteDemo2/providers/Microsoft.Network/virtualNetworks/VpnVnet2/subnets/AppGatewaySubnet",
                "name": "AppGatewaySubnet"
              }
            ],
            "tags": {
              "author": "khangtictoc",
              "createdBy": "Terraform",
              "environment": "dev",
              "project": "lab_extra_03"
            }
          },
          "dependencies": [
            "azurerm_resource_group.vpn_resource_group"
          ]
        }
      ]
    },
    {
      "module": "module.vpn_s2s_aws_azure.module.azure_network[1]",
      "mode": "managed",
      "type": "azurerm_virtual_network_gateway",
      "name": "virtual_network_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "active_active": false,
            "bgp_route_translation_for_nat_enabled": false,
            "bgp_settings": [
              {
                "asn": 65515,
                "peer_weight": 0,
                "peering_addresses": [
                  {
                    "default_addresses": [
                      "10.10.0.30"
                    ],
                    "ip_configuration_name": "Vnet-Gateway-IP-Config2",
                    "tunnel_ip_addresses": [
                      "168.63.143.66"
                    ]
                  }
                ]
              }
            ],
            "dns_forwarding_enabled": false,
            "enable_bgp": false,
            "generation": "Generation1",
            "id": "/subscriptions/ac90b42a-8ba9-48f5-9479-94dfd054e40d/resourceGroups/VPNSite2SiteDemo2/providers/Microsoft.Network/virtualNetworkGateways/Vnet-Gateway-Demo2",
            "ip_configuration": [
              {
                "name": "Vnet-Gateway-IP-Config2",
                "private_ip_address_allocation": "Dynamic",
                "public_ip_address_id": "/subscriptions/ac90b42a-8ba9-48f5-9479-94dfd054e40d/resourceGroups/VPNSite2SiteDemo2/providers/Microsoft.Network/publicIPAddresses/VNet-Gateway2",
                "subnet_id": "/subscriptions/ac90b42a-8ba9-48f5-9479-94dfd054e40d/resourceGroups/VPNSite2SiteDemo2/providers/Microsoft.Network/virtualNetworks/VpnVnet2/subnets/GatewaySubnet"
              }
            ],
            "ip_sec_replay_protection_enabled": true,
            "location": "eastasia",
            "name": "Vnet-Gateway-Demo2",
            "private_ip_address_enabled": false,
            "remote_vnet_traffic_enabled": false,
            "resource_group_name": "VPNSite2SiteDemo2",
            "sku": "VpnGw1",
            "tags": {
              "author": "khangtictoc",
              "createdBy": "Terraform",
              "environment": "dev",
              "project": "lab_extra_03"
            },
            "type": "Vpn",
            "virtual_wan_traffic_enabled": false,
            "vpn_type": "RouteBased"
          },
          "dependencies": [
            "azurerm_resource_group.vpn_resource_group",
            "module.vpn_s2s_aws_azure.module.azure_network.azurerm_public_ip.vpn_public_ip",
            "module.vpn_s2s_aws_azure.module.azure_network.azurerm_subnet.vpn_subnet",
            "module.vpn_s2s_aws_azure.module.azure_network.azurerm_virtual_network.vpn_virtual_network"
          ]
        }
      ]
    },
    {
      "module": "module.vpn_s2s_aws_azure.module.vpn_SiteToSite_connection[0]",
      "mode": "managed",
      "type": "aws_route",
      "name": "internet_gateway_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-02909ad3c551139d5",
            "id": "r-rtb-039827a9320c75f331080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-039827a9320c75f33",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.vpn_resource_group",
            "module.vpn_s2s_aws_azure.module.aws_network.aws_internet_gateway.internet_gateway",
            "module.vpn_s2s_aws_azure.module.aws_network.aws_subnet.vpn_subnet",
            "module.vpn_s2s_aws_azure.module.aws_network.aws_vpc.vpn_vpc",
            "module.vpn_s2s_aws_azure.module.aws_network.aws_vpn_gateway.virtual_private_gateway"
          ]
        }
      ]
    },
    {
      "module": "module.vpn_s2s_aws_azure.module.vpn_SiteToSite_connection[0]",
      "mode": "managed",
      "type": "aws_route",
      "name": "vpn_gateway_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "172.16.0.0/16",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "vgw-0f22ec57e26d09add",
            "id": "r-rtb-039827a9320c75f333246677288",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-039827a9320c75f33",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.vpn_resource_group",
            "module.vpn_s2s_aws_azure.module.aws_network.aws_internet_gateway.internet_gateway",
            "module.vpn_s2s_aws_azure.module.aws_network.aws_subnet.vpn_subnet",
            "module.vpn_s2s_aws_azure.module.aws_network.aws_vpc.vpn_vpc",
            "module.vpn_s2s_aws_azure.module.aws_network.aws_vpn_gateway.virtual_private_gateway",
            "module.vpn_s2s_aws_azure.module.azure_network.azurerm_public_ip.vpn_public_ip",
            "module.vpn_s2s_aws_azure.module.azure_network.azurerm_subnet.vpn_subnet",
            "module.vpn_s2s_aws_azure.module.azure_network.azurerm_virtual_network.vpn_virtual_network",
            "module.vpn_s2s_aws_azure.module.azure_network.azurerm_virtual_network_gateway.virtual_network_gateway"
          ]
        }
      ]
    },
    {
      "module": "module.vpn_s2s_aws_azure.module.vpn_SiteToSite_connection[0]",
      "mode": "managed",
      "type": "azurerm_virtual_network_gateway_connection",
      "name": "vpn_connection",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "connection_mode": "Default",
            "connection_protocol": "IKEv2",
            "dpd_timeout_seconds": 0,
            "enable_bgp": false,
            "express_route_gateway_bypass": false,
            "id": "/subscriptions/ac90b42a-8ba9-48f5-9479-94dfd054e40d/resourceGroups/VPNSite2SiteDemo/providers/Microsoft.Network/connections/myVnetGWConn",
            "local_azure_ip_address_enabled": false,
            "local_network_gateway_id": "/subscriptions/ac90b42a-8ba9-48f5-9479-94dfd054e40d/resourceGroups/VPNSite2SiteDemo/providers/Microsoft.Network/localNetworkGateways/my-vpn-connection",
            "location": "eastasia",
            "name": "myVnetGWConn",
            "resource_group_name": "VPNSite2SiteDemo",
            "routing_weight": 0,
            "shared_key": "94qjtrwZnO7aNl10j_z7fHr0w5cWO5Wx",
            "type": "IPsec",
            "use_policy_based_traffic_selectors": false,
            "virtual_network_gateway_id": "/subscriptions/ac90b42a-8ba9-48f5-9479-94dfd054e40d/resourceGroups/VPNSite2SiteDemo/providers/Microsoft.Network/virtualNetworkGateways/Vnet-Gateway-Demo"
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "authorization_key"
              }
            ],
            [
              {
                "type": "get_attr",
                "value": "shared_key"
              }
            ]
          ],
          "dependencies": [
            "azurerm_resource_group.vpn_resource_group",
            "module.vpn_s2s_aws_azure.module.aws_network.aws_internet_gateway.internet_gateway",
            "module.vpn_s2s_aws_azure.module.aws_network.aws_subnet.vpn_subnet",
            "module.vpn_s2s_aws_azure.module.aws_network.aws_vpc.vpn_vpc",
            "module.vpn_s2s_aws_azure.module.aws_network.aws_vpn_gateway.virtual_private_gateway",
            "module.vpn_s2s_aws_azure.module.azure_network.azurerm_public_ip.vpn_public_ip",
            "module.vpn_s2s_aws_azure.module.azure_network.azurerm_subnet.vpn_subnet",
            "module.vpn_s2s_aws_azure.module.azure_network.azurerm_virtual_network.vpn_virtual_network",
            "module.vpn_s2s_aws_azure.module.azure_network.azurerm_virtual_network_gateway.virtual_network_gateway",
            "module.vpn_s2s_aws_azure.module.vpn_SiteToSite_connection.aws_customer_gateway.customer_gateway",
            "module.vpn_s2s_aws_azure.module.vpn_SiteToSite_connection.aws_vpn_connection.vpn_connection",
            "module.vpn_s2s_aws_azure.module.vpn_SiteToSite_connection.azurerm_local_network_gateway.local_network_gateway"
          ]
        }
      ]
    },
    {
      "module": "module.vpn_s2s_aws_azure.module.vpn_SiteToSite_connection[1]",
      "mode": "managed",
      "type": "aws_route",
      "name": "internet_gateway_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-02909ad3c551139d5",
            "id": "r-rtb-039827a9320c75f331080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-039827a9320c75f33",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.vpn_resource_group",
            "module.vpn_s2s_aws_azure.module.aws_network.aws_internet_gateway.internet_gateway",
            "module.vpn_s2s_aws_azure.module.aws_network.aws_subnet.vpn_subnet",
            "module.vpn_s2s_aws_azure.module.aws_network.aws_vpc.vpn_vpc",
            "module.vpn_s2s_aws_azure.module.aws_network.aws_vpn_gateway.virtual_private_gateway"
          ]
        }
      ]
    },
    {
      "module": "module.vpn_s2s_aws_azure.module.vpn_SiteToSite_connection[1]",
      "mode": "managed",
      "type": "aws_route",
      "name": "vpn_gateway_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "10.10.0.0/16",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "vgw-0f22ec57e26d09add",
            "id": "r-rtb-039827a9320c75f33519371977",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-039827a9320c75f33",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.vpn_resource_group",
            "module.vpn_s2s_aws_azure.module.aws_network.aws_internet_gateway.internet_gateway",
            "module.vpn_s2s_aws_azure.module.aws_network.aws_subnet.vpn_subnet",
            "module.vpn_s2s_aws_azure.module.aws_network.aws_vpc.vpn_vpc",
            "module.vpn_s2s_aws_azure.module.aws_network.aws_vpn_gateway.virtual_private_gateway",
            "module.vpn_s2s_aws_azure.module.azure_network.azurerm_public_ip.vpn_public_ip",
            "module.vpn_s2s_aws_azure.module.azure_network.azurerm_subnet.vpn_subnet",
            "module.vpn_s2s_aws_azure.module.azure_network.azurerm_virtual_network.vpn_virtual_network",
            "module.vpn_s2s_aws_azure.module.azure_network.azurerm_virtual_network_gateway.virtual_network_gateway"
          ]
        }
      ]
    },
    {
      "module": "module.vpn_s2s_aws_azure.module.vpn_SiteToSite_connection[1]",
      "mode": "managed",
      "type": "azurerm_virtual_network_gateway_connection",
      "name": "vpn_connection",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "connection_mode": "Default",
            "connection_protocol": "IKEv2",
            "dpd_timeout_seconds": 0,
            "enable_bgp": false,
            "express_route_gateway_bypass": false,
            "id": "/subscriptions/ac90b42a-8ba9-48f5-9479-94dfd054e40d/resourceGroups/VPNSite2SiteDemo2/providers/Microsoft.Network/connections/myVnetGWConn2",
            "local_azure_ip_address_enabled": false,
            "local_network_gateway_id": "/subscriptions/ac90b42a-8ba9-48f5-9479-94dfd054e40d/resourceGroups/VPNSite2SiteDemo2/providers/Microsoft.Network/localNetworkGateways/my-vpn-connection2",
            "location": "eastasia",
            "name": "myVnetGWConn2",
            "resource_group_name": "VPNSite2SiteDemo2",
            "routing_weight": 0,
            "shared_key": "RgKOr10ECbPt_evB.MJWOYPk0v30wIk4",
            "type": "IPsec",
            "use_policy_based_traffic_selectors": false,
            "virtual_network_gateway_id": "/subscriptions/ac90b42a-8ba9-48f5-9479-94dfd054e40d/resourceGroups/VPNSite2SiteDemo2/providers/Microsoft.Network/virtualNetworkGateways/Vnet-Gateway-Demo2"
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "authorization_key"
              }
            ],
            [
              {
                "type": "get_attr",
                "value": "shared_key"
              }
            ]
          ],
          "dependencies": [
            "azurerm_resource_group.vpn_resource_group",
            "module.vpn_s2s_aws_azure.module.aws_network.aws_internet_gateway.internet_gateway",
            "module.vpn_s2s_aws_azure.module.aws_network.aws_subnet.vpn_subnet",
            "module.vpn_s2s_aws_azure.module.aws_network.aws_vpc.vpn_vpc",
            "module.vpn_s2s_aws_azure.module.aws_network.aws_vpn_gateway.virtual_private_gateway",
            "module.vpn_s2s_aws_azure.module.azure_network.azurerm_public_ip.vpn_public_ip",
            "module.vpn_s2s_aws_azure.module.azure_network.azurerm_subnet.vpn_subnet",
            "module.vpn_s2s_aws_azure.module.azure_network.azurerm_virtual_network.vpn_virtual_network",
            "module.vpn_s2s_aws_azure.module.azure_network.azurerm_virtual_network_gateway.virtual_network_gateway",
            "module.vpn_s2s_aws_azure.module.vpn_SiteToSite_connection.aws_customer_gateway.customer_gateway",
            "module.vpn_s2s_aws_azure.module.vpn_SiteToSite_connection.aws_vpn_connection.vpn_connection",
            "module.vpn_s2s_aws_azure.module.vpn_SiteToSite_connection.azurerm_local_network_gateway.local_network_gateway"
          ]
        }
      ]
    }
  ]
}